<resources>
    <string name="app_name">Dsige Reparto</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <string name="sort_ascending">Sort Ascending</string>
    <string name="sort_descending">Sort Descending</string>
    <string name="clear_sorting">Clear</string>
    <string name="row_show">Show 5. Row</string>
    <string name="row_hide">Hide 5. Row</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="img">Imagen</string>
    <string name="envio_pedidos">Envio de pedidos</string>
    <string name="try_again">Intentalo nuevamente</string>
    <string name="message">Mensaje</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="ajuste">Ajuste</string>
    <string name="contentGps">Gps desactivado, necesitas activarlo para poder continuar ?</string>
    <string name="usuario">Usuario</string>
    <string name="imagen">IMAGEN</string>
    <string name="title_menu">Menu Principal</string>
    <string name="seguro_sincronizar">Estas seguro de sincronizar ?</string>
    <string name="sincronizar">Sincronizar</string>
    <string name="tecnico">Servicio Técnico</string>
    <string name="reporte_atencion">Reporte de Atención</string>
    <string name="title_services">Servicios</string>
    <string name="tab1">Generales</string>
    <string name="tab2">Descripción</string>
    <string name="tab3">Conformidad</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="detalle">Detalle del incidente o solicitud</string>
    <string name="cliente">Cliente</string>
    <string name="alternativos">Nombres Alternativos</string>
    <string name="recomendaciones">Recomendaciones</string>
    <string name="fecha_conformidad">Fecha de Conformidad</string>
    <string name="representante_cliente">Representante del Cliente</string>
    <string name="version">1.0</string>
    <string name="user">Usuario</string>
    <string name="pass">Contraseña</string>
    <string name="ingresar">Enviar</string>
    <string name="login">Iniciando Sesión</string>
    <string name="permission">No cuentas con permisos</string>
    <string name="error_pass">Contraseña Incorrecta</string>
    <string name="error_user">Usuario no existe.</string>
    <string name="message_permission">Permisos Denegados</string>
    <string name="content_permission">Debes de aceptar los permisos para poder acceder al aplicativo</string>
    <string name="no_sincronizar">No se pudo sincronizar</string>
    <string name="synchronization_complet">Sincronización Completa</string>
    <string name="new_update">Actualizar Aplicativo</string>
    <string name="firma">Firma</string>
    <string name="close">Salir</string>
    <string name="language">Idioma</string>
    <string name="description_message">Estas seguro de salir ?</string>
    <string name="singin">Login</string>
    <string name="compatible_device">Dispositivo no compatible para esta opción</string>
    <string name="cargo">Cargo</string>
    <string name="registrar">Registrar</string>
    <string name="nombre">Nombre</string>
    <string name="guardar">Guardar</string>
    <string name="documento">Documento</string>
    <string name="condicion_pago">Condición de Pago</string>
    <string name="departamento">Departamento</string>
    <string name="distrito">Distrito</string>
    <string name="direccion">Dirección</string>
    <string name="telefono">Telefono</string>
    <string name="email">Email</string>
    <string name="dia_visita">Día de visita</string>
    <string name="tipo">Tipo</string>
    <string name="title_activity_maps">Map</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="pedidos">Pedidos</string>
    <string name="cobros">Cobros</string>
    <string name="foto">Foto</string>
    <string name="comentario">Comentario</string>
    <string name="reubica">Reubica</string>
    <string name="buscar">Buscar</string>
    <string name="provincia">Provincia</string>
    <string name="motivo_no_comprar">Motivo no Comprar</string>
    <string name="producto_de_interes">Producto de Interés</string>
    <string name="cantidad_producto">Cantidad Producto</string>
    <string name="digite_cantidad">digite cantidad</string>
    <string name="ok">OK</string>
    <string name="unid">500 unid</string>
    <string name="dinamita_acme">Dinamita Acme</string>
    <string name="acme_02_004">ACME–02–004</string>
    <string name="precio">10000000</string>
    <string name="ver">Ver Pedido</string>
    <string name="delete">Eliminar</string>
    <string name="go">Ver Ruta</string>
    <string name="goPedido">Editar Pedido</string>
    <string name="search">Buscar</string>
    <string name="filtro">Filtro</string>
    <string name="ver_ruta">Ver ruta</string>
    <string name="entrega_factura">Entrega de Factura</string>
    <string name="cargando">Cargando…</string>
    <string name="motivo_devolucion">Motivo de Devolución</string>
    <string name="save">Guardar</string>
    <string name="dni">70401291</string>
    <string name="name">irvin joao gongora hernandez</string>
    <string name="logout">Salir</string>
</resources>