<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/filter"
        android:icon="@drawable/ic_search_white"
        android:orderInCategory="100"
        android:title="@string/filtro"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search_white"
        android:orderInCategory="100"
        android:title="@string/buscar"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/add"
        android:icon="@drawable/ic_add"
        android:orderInCategory="100"
        android:title="@string/pedidos"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/ok"
        android:icon="@drawable/ic_done"
        android:orderInCategory="200"
        android:title="@string/ok"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/logout"
        android:icon="@drawable/ic_exit"
        android:title="@string/logout"
        app:showAsAction="ifRoom" />
</menu>